<resources>
    <string name="app_name">Brain_Dots</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="options">Options</string>
    <string name="_1_6">1-6</string>
    <string name="_7_12">7-12</string>
    <string name="_13_18">13-18</string>
    <string name="_19_24">19-24</string>
    <string name="_25_30">25-30</string>
    <string name="user_name">Tony Green</string>
    <string name="mail">talentedyuan@gmail.com</string>
    <string name="select">在下方选择关卡</string>
    <string name="setting">setting</string>
    <string name="setting_str">设置</string>
    <string name="soundOff">声音开关</string>
    <string name="off">OFF</string>
    <string name="on">On</string>
    <string name="soundOn">声音开关</string>
    <string name="soundEffect">音效开关</string>
    <string name="re_game">重新开始游戏</string>
    <string name="placeholder">llll</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="currentMoney">当前金钱数量:</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO2</string>
</resources>
