<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/level_1_6"
            android:icon="@drawable/nav_location"
            android:title="@string/_1_6" />
        <item
            android:id="@+id/level_7_12"
            android:icon="@drawable/nav_location"
            android:title="@string/_7_12" />
        <item
            android:id="@+id/level_13_18"
            android:icon="@drawable/nav_location"
            android:title="@string/_13_18" />
        <item
            android:id="@+id/level_18_24"
            android:icon="@drawable/nav_location"
            android:title="@string/_19_24" />
        <item
            android:id="@+id/level_25_30"
            android:icon="@drawable/nav_location"
            android:title="@string/_25_30" />
    </group>
</menu>