<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2">


        <TextView
            android:id="@+id/alter_dialog_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="20sp" />

        <TableRow>

            <TextView
                android:textColor="@color/white"
                android:text="@string/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <Button
                android:id="@+id/btn_confirm_dialog"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_cancel_dialog"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>